<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.brandon.chavez.android.app.cryptapp.MainActivity$PlaceholderFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fp_fabPolialfabeto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_done_white_24dp" />

                <TextView
                    android:id="@+id/fp_tvHelloWorld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:text="@string/fp_tvHelloWorld" />
            </FrameLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/fp_rbEncriptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/fp_rbEncriptar" />

                <RadioButton
                    android:id="@+id/fp_rbDesencriptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fp_rbDesencriptar" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/fp_llEncriptar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fp_etTextoEncriptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fp_etTextoEncriptar"
                    android:inputType="textCapCharacters" />

                <TextView
                    android:id="@+id/fp_tvTextoEncriptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/vacio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fp_llDesencriptar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fp_etTextoDesencriptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/fp_etTextoDesencriptar" />

                <TextView
                    android:id="@+id/fp_tvTextoDesencriptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/vacio" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>
